[gd_scene load_steps=10 format=4]

[ext_resource type="Script" path="res://addons/primes/panel.gd" id="1_ph1id"]
[ext_resource type="Script" path="res://addons/primes/ui/author_section.gd" id="4_author"]
[ext_resource type="Script" path="res://addons/primes/ui/published_list.gd" id="5_published_list"]
[ext_resource type="Script" path="res://addons/primes/ui/publish_form.gd" id="6_publish_form"]
[ext_resource type="Script" path="res://addons/primes/ui/logs_area.gd" id="7_logs"]
[ext_resource type="Script" path="res://addons/primes/ui/sign_in_view.gd" id="8_sign_in"]
[ext_resource type="Script" path="res://addons/primes/ui/edit_prime_dialog.gd" id="9_edit"]
[ext_resource type="Script" path="res://addons/primes/ui/flags_dialog.gd" id="10_lhi0s"]

[sub_resource type="StyleBoxEmpty" id="SB_EMPTY"]

[node name="CloudPublisherPanel" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 3
script = ExtResource("1_ph1id")

[node name="Root" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="EditDialog" type="AcceptDialog" parent="Root"]
title = "Edit details"
ok_button_text = "Update"
script = ExtResource("9_edit")

[node name="EditVBox" type="VBoxContainer" parent="Root/EditDialog"]
theme_override_constants/separation = 8

[node name="NameGroup" type="VBoxContainer" parent="Root/EditDialog/EditVBox"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="NameLabel" type="Label" parent="Root/EditDialog/EditVBox/NameGroup"]
layout_mode = 2
text = "Name"

[node name="NameEdit" type="LineEdit" parent="Root/EditDialog/EditVBox/NameGroup"]
layout_mode = 2
size_flags_horizontal = 3
max_length = 32

[node name="DescGroup" type="VBoxContainer" parent="Root/EditDialog/EditVBox"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="DescLabel" type="Label" parent="Root/EditDialog/EditVBox/DescGroup"]
layout_mode = 2
text = "Description"

[node name="DescEdit" type="TextEdit" parent="Root/EditDialog/EditVBox/DescGroup"]
layout_mode = 2
size_flags_horizontal = 3
wrap_mode = 1

[node name="Stack" type="VBoxContainer" parent="Root"]
layout_mode = 2
size_flags_vertical = 3

[node name="Publish" type="VBoxContainer" parent="Root/Stack"]
visible = false
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="AuthorRow" type="HBoxContainer" parent="Root/Stack/Publish"]
layout_mode = 2
script = ExtResource("4_author")

[node name="AuthorIcon" type="TextureRect" parent="Root/Stack/Publish/AuthorRow"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
size_flags_vertical = 4
stretch_mode = 3

[node name="AuthorValue" type="Label" parent="Root/Stack/Publish/AuthorRow"]
layout_mode = 2
theme_override_styles/normal = SubResource("SB_EMPTY")

[node name="LogoutBtn" type="Button" parent="Root/Stack/Publish/AuthorRow"]
modulate = Color(1, 1, 1, 0.8)
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_vertical = 4
focus_mode = 0
mouse_default_cursor_shape = 2
theme_override_styles/hover = SubResource("SB_EMPTY")
theme_override_styles/pressed = SubResource("SB_EMPTY")
theme_override_styles/normal = SubResource("SB_EMPTY")
flat = true

[node name="PublishedScroll" type="ScrollContainer" parent="Root/Stack/Publish"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0
script = ExtResource("5_published_list")

[node name="PublishedListContainer" type="VBoxContainer" parent="Root/Stack/Publish/PublishedScroll"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="DividerContainer" type="MarginContainer" parent="Root/Stack/Publish"]
layout_mode = 2
theme_override_constants/margin_top = 12
theme_override_constants/margin_bottom = 0

[node name="Spacer" type="Control" parent="Root/Stack/Publish/DividerContainer"]
custom_minimum_size = Vector2(0, 6)
layout_mode = 2

[node name="DividerRow" type="HBoxContainer" parent="Root/Stack/Publish/DividerContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="LeftLine" type="HSeparator" parent="Root/Stack/Publish/DividerContainer/DividerRow"]
layout_mode = 2
size_flags_horizontal = 0

[node name="DividerLabel" type="Label" parent="Root/Stack/Publish/DividerContainer/DividerRow"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Publish current project"
vertical_alignment = 1

[node name="RightLine" type="HSeparator" parent="Root/Stack/Publish/DividerContainer/DividerRow"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Form" type="VBoxContainer" parent="Root/Stack/Publish"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8
script = ExtResource("6_publish_form")

[node name="CenterRow" type="HBoxContainer" parent="Root/Stack/Publish/Form"]
layout_mode = 2
size_flags_horizontal = 3

[node name="FormInner" type="VBoxContainer" parent="Root/Stack/Publish/Form/CenterRow"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/separation = 8

[node name="RightArea" type="CenterContainer" parent="Root/Stack/Publish/Form/CenterRow"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ToSBox" type="VBoxContainer" parent="Root/Stack/Publish/Form/CenterRow/RightArea"]
layout_mode = 2
custom_minimum_size = Vector2(260, 0)
theme_override_constants/separation = 6

[node name="ToSNotice" type="RichTextLabel" parent="Root/Stack/Publish/Form/CenterRow/RightArea/ToSBox"]
layout_mode = 2
bbcode_enabled = true
fit_content = true
autowrap_mode = 2
mouse_filter = 0
theme_override_styles/normal = SubResource("SB_EMPTY")
text = "[center][b]By clicking Publish, you agree to the[/b]\n[url=https://ole-luk-oie.com/primes-tos/]Terms of Service[/url].\n\nYou keep ownership of your projects and assets.\nPrimes only receives a limited license to store and display your work.[/center]"

[node name="NameGroup" type="VBoxContainer" parent="Root/Stack/Publish/Form/CenterRow/FormInner"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="NameLabel" type="Label" parent="Root/Stack/Publish/Form/CenterRow/FormInner/NameGroup"]
layout_mode = 2
text = "Name (optional)"

[node name="Name" type="LineEdit" parent="Root/Stack/Publish/Form/CenterRow/FormInner/NameGroup"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "If left blank the sequence number will be used (e.g. “#7”)"
max_length = 36

[node name="DescGroup" type="VBoxContainer" parent="Root/Stack/Publish/Form/CenterRow/FormInner"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="DescLabel" type="Label" parent="Root/Stack/Publish/Form/CenterRow/FormInner/DescGroup"]
layout_mode = 2
text = "Description (optional)"

[node name="Desc" type="TextEdit" parent="Root/Stack/Publish/Form/CenterRow/FormInner/DescGroup"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
wrap_mode = 1

[node name="SpacerTop" type="Control" parent="Root/Stack/Publish/Form/CenterRow/FormInner"]
custom_minimum_size = Vector2(0, 1)
layout_mode = 2

[node name="ActionArea" type="HBoxContainer" parent="Root/Stack/Publish/Form/CenterRow/FormInner"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="RunOnPhoneBtn" type="Button" parent="Root/Stack/Publish/Form/CenterRow/FormInner/ActionArea"]
layout_mode = 2
tooltip_text = "No Android device detected via adb"
disabled = true
text = "Run in app"

[node name="PublishBtn" type="Button" parent="Root/Stack/Publish/Form/CenterRow/FormInner/ActionArea"]
layout_mode = 2
text = "Publish"

[node name="HideFromFeed" type="CheckBox" parent="Root/Stack/Publish/Form/CenterRow/FormInner/ActionArea"]
layout_mode = 2
size_flags_horizontal = 0
tooltip_text = "If checked, your project won't appear in users' feeds. It can only be opened by a direct link."
text = "Hide from feed"

[node name="SpacerBottom" type="Control" parent="Root/Stack/Publish/Form/CenterRow/FormInner"]
layout_mode = 2

[node name="SignInWrapper" type="Control" parent="Root/Stack"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SignIn" type="VBoxContainer" parent="Root/Stack/SignInWrapper"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = -60.0
offset_right = 125.0
offset_bottom = 60.0
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1
script = ExtResource("8_sign_in")

[node name="EmailL" type="Label" parent="Root/Stack/SignInWrapper/SignIn"]
layout_mode = 2
text = "Enter email:"

[node name="Email" type="LineEdit" parent="Root/Stack/SignInWrapper/SignIn"]
layout_mode = 2
size_flags_horizontal = 4
placeholder_text = "you@example.com"

[node name="EmailSpacer" type="Control" parent="Root/Stack/SignInWrapper/SignIn"]
custom_minimum_size = Vector2(0, 6)
layout_mode = 2

[node name="SignInRow" type="HBoxContainer" parent="Root/Stack/SignInWrapper/SignIn"]
layout_mode = 2
alignment = 2

[node name="BackBtn" type="Button" parent="Root/Stack/SignInWrapper/SignIn/SignInRow"]
visible = false
layout_mode = 2
size_flags_horizontal = 0
text = "Back"

[node name="SignInBtn" type="Button" parent="Root/Stack/SignInWrapper/SignIn/SignInRow"]
layout_mode = 2
size_flags_horizontal = 4
text = "Send code"

[node name="InitializingWrapper" type="Control" parent="Root/Stack"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Initializing" type="VBoxContainer" parent="Root/Stack/InitializingWrapper"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -20.0
offset_right = 100.0
offset_bottom = 20.0
alignment = 1

[node name="Label" type="Label" parent="Root/Stack/InitializingWrapper/Initializing"]
layout_mode = 2
text = "Initializing..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="Log" type="RichTextLabel" parent="Root"]
layout_mode = 2
size_flags_vertical = 0
focus_mode = 2
bbcode_enabled = true
text = "[i]Logs will appear here...[/i]"
autowrap_mode = 2
selection_enabled = true
script = ExtResource("7_logs")

[node name="FlagsDialog" type="AcceptDialog" parent="Root"]
title = "Flags for TEST_PRIME"
position = Vector2i(0, 36)
size = Vector2i(56, 80)
ok_button_text = "Close"
script = ExtResource("10_lhi0s")

[node name="VBoxContainer" type="VBoxContainer" parent="Root/FlagsDialog"]
offset_left = 8.0
offset_top = 8.0
offset_right = 48.0
offset_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="ScrollContainer" type="ScrollContainer" parent="Root/FlagsDialog/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="FlagsList" type="VBoxContainer" parent="Root/FlagsDialog/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
